...
    func show(quiz result: QuizResultsViewModel) {
        
        let alertModel = AlertModel(
                title: result.title,
                message: result.text,
                buttonText: result.buttonText,
                accessibilityIdentifier: "Game results") { [weak self] in
                    guard let self else { return }
                    self.presenter.restartGame()
                }
        
        alertPresenter.presentAlert(viewController: self, alertModel: alertModel)
        
...
